
[workspace]
members = [".", "axum-csp-examples"]

[package]
name = "axum-csp"
description = "Some widgets for use with axum to create Content-Security-Policy headers and reduce silly typos."
readme = "README.md"
version = "0.0.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/yaleman/axum-csp"
keywords = ["http", "axum", "tower", "csp"]
categories = ["network-programming"]

[dependencies]
axum = { workspace = true, default-features = false }
regex = { workspace = true }

[workspace.dependencies]
axum = { version = "0.8.7", default-features = false }
regex = "1.12.2"
