[package]
name = "axum-csp-examples"
version = "0.0.1"
edition = "2021"


[dependencies]

axum-csp = { path = "../" }
axum = { version = "^0.7.4", default-features = false, features = [
    "original-uri",
    "tokio",
    "http1",
] }
regex = "1.10.2"
tokio = { version = "1.35.1", default-features = false, features = ["sync"] }

[dev-dependencies]
axum-server = "0.6.0"
lazy_static = "1.4.0"
tokio = { version = "1.35.1", default-features = false, features = ["full"] }
