[package]
name = "axum-csp-examples"
version = "0.0.1"
edition = "2021"


[dependencies]

axum-csp = { path = "../" }
axum = { workspace = true, default-features = false, features = [
    "original-uri",
    "tokio",
    "http1",
] }
regex = { workspace = true }
tokio = { version = "1.38.0", default-features = false, features = ["sync"] }

[dev-dependencies]
axum-server = "0.6.0"
lazy_static = "1.4.0"
tokio = { version = "1.38.0", default-features = false, features = ["full"] }
