[package]
name = "axum-csp-examples"
version = "0.0.1"
edition = "2021"


[dependencies]

axum-csp = { path = "../" }
axum = { workspace = true, default-features = false, features = [
    "original-uri",
    "tokio",
    "http1",
] }
regex = { workspace = true }
tokio = { version = "1.44.2", default-features = false, features = ["sync"] }

[dev-dependencies]
axum-server = "0.7.2"
tokio = { version = "1.44.2", default-features = false, features = ["full"] }
